--- a/docs/src/08_concepts.adoc
+++ b/docs/src/08_concepts.adoc
@@ -79,8 +79,7 @@ The user experience is a key focus of this system, with an emphasis on accessibi
 - **Game Features**:
   - **Round-based Play**: Users can choose to play in rounds, where each round presents a set of questions, and the game tracks performance across multiple rounds.
   - **Time-based Play**: Alternatively, players can play against the clock, answering questions as quickly as possible to compete with others or themselves.
-  - **Clues and Help Options**: Players have the option to use several clues, such as hints or using an LLM chat to help them answer difficult questions.
-  - **Social Features**: Users can call a friend for assistance using game stats to determine the best options for asking for help.
+  - **Clues and Help Options**: Players have the option to use several clues, such as hints or using an LLM chat to help them answer difficult questions. Users can mimmick a call a friend for assistance using game stats to determine the best options for asking for help or even ask the audience.
   
 - **Ranking and History**: A ranking system tracks the performance of players, allowing users to see how they compare to others. Historical data is stored to allow users to review past quizzes and track improvement over time.
 
